<resources>
    <string name="app_name">Shakti Employee</string>
    <string name="app_version">Version 1.0</string>
    <string name="google_API_KEY">AIzaSyAohhwZ11LRwoxsS8lJ0VHGkA4L-cwjWmw</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="date_time">Start Date</string>
    <string name="country">Country</string>
    <string name="end_time">End Date</string>
    <string name="Fromtxt">From Date</string>
    <string name="Totxt">To Date</string>
    <string name="Expensestxt">Expenses Type</string>
    <string name="Amounttxt">Amount</string>
    <string name="Currencytxt">Currency</string>
    <string name="Taxcode">Tax Code</string>
    <string name="Region">Region</string>
    <string name="Description">Description</string>
    <string name="Location">Location</string>
    <string name="GST">GSTIN No.</string>
    <string name="card">Card Info/Cash</string>
    <string name="Please_select_to_date">Please Select To Date</string>
    <string name="Please_select_from_date">Please Select From Date</string>
    <string name="Please_select_exp">Please Select Expenses</string>
    <string name="Please_select_curr">Please Select Currency</string>
    <string name="Please_select_amt">Please Enter Amount</string>
    <string name="Please_select_tax">Please Select Taxcode</string>
    <string name="Please_select_des">Please Enter Description</string>
    <string name="Please_select_loc">Please Enter Location</string>
    <string name="Please_enter_pernr">Please Enter Employee ID</string>
    <string name="Please_select_start">Please Select Start Date</string>
    <string name="Please_select_end">Please Select End Date</string>
    <string name="Please_select_coun">Please Select Country</string>
    <string name="Please_enter_loc">Please Enter Location</string>
    <string name="Please_enter_card">Please Enter Location</string>
    <string name="Please_enter_gstno">Please Enter GSTIN No.</string>
    <string name="Please_select_reg">Please Select Region</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="openDrawer">open_drawer</string>
    <string name="closeDrawer">close_drawer</string>
    <string name="spinner_title">spinner_title</string>
    <string name="crash_toast_text">Ooooops ! App crashed, but a report will be sent to developer to help fix the issue !</string>
    <string name="trvlmod">Travel Mode <font color='#FF0000'>*</font></string>
    <string name="nav_home">Home</string>
    <string name="nav_attendance">Attendance</string>
    <string name="nav_leave">Leave</string>
    <string name="nav_od">Official Duty</string>
    <string name="nav_payslip">Payslip</string>
    <string name="nav_info">Personal Info</string>
    <string name="nav_info_edit">Edit Personal Info</string>
    <string name="action_file_detail_menu">Sync Data</string>
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Attendance</item>
        <item>Leave</item>
        <item>Official Duty</item>
        <item>Payslip</item>
        <item>Leave Create</item>
    </string-array>
    <string name="confirm"><![CDATA[Pressing <b>Confirm</b> will start your Journey.]]></string>
    <string name="confirm_">Confirm</string>
    <string name="activity_title_about_us">About Us</string>
    <string name="activity_title_privacy_policy">Privacy Policy</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_logout">Logout</string>
    <string name="action_sync">Download Data</string>
    <string name="action_sync_offline">Sync Offline Data</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="request_location_updates">Request location updates</string>
    <string name="remove_location_updates">Remove location updates</string>
    <string name="location_updated">Location Updated: %1$s</string>
    <string name="launch_activity">Shakti Employee App</string>
    <string name="location_unknown">Location unknown</string>
    <string name="location_updates_label">Location Updates</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="ok">OK</string>
    <string name="start"><![CDATA[Pressing <b>Confirm</b> will start your Journey.]]></string>
    <string name="end"><![CDATA[Pressing <b>Confirm</b> will stop your Journey.]]></string>
    <string name="result_code">"Update canceled by user! Result Code: "</string>
    <string name="update_success">Update success!</string>
    <string name="update_failed">"Update Failed! Result Code: "</string>
    <string name="all_permission">Please allow all the permission</string>
    <string name="storage_permission">Allow permission for storage access!</string>
    <string name="loading">Loading...</string>
    <string name="please_wait_">Please Wait...</string>
    <string name="no_location_found">No Location found</string>
    <string name="Current_Location">Current Location</string>
    <string name="YourJourney">Your Journey will be Started...</string>
    <string name="Pleasewaitcurrentlocation">Please wait for your current location.</string>
    <string name="take">Take Photo</string>
    <string name="cancel">Cancel</string>
    <string name="AddPhoto">Add Photo!</string>
    <string name="saved_travel_data">Your travel record saved in offline data.</string>
    <string name="end_photo">End Photo</string>
    <string name="localconveniencedetails">Local Conveyance Details</string>
    <string name="endyourJourney">Press Confirm will end your Journey</string>
    <string name="sending_please_wait">Sending Data to server..please wait !</string>
    <string name="Please_Enter_Travel_Mode">Please Enter Travel Mode.</string>
    <string name="ConnectToInternet">Please check your internet connection first!</string>
    <string name="start_photo">Start Photo</string>
    <string name="notification_permission">Notification access required</string>
    <string name="notification_permission_txt">Please give access to receive notification for \nnew updates.</string>
    <string name="Employee_app_updation">Latest Employee app is live on playstore, please update it first and enjoy!</string>
    <string-array name="spinner_mrc_type">
        <item>DRC-Daily Review Committee (YTT)</item>
        <item>WRC-Weekly Review Committee</item>
        <item>MINI-Monthly Review Committee</item>
        <item>WOBJ-Weekly Objective</item>
        <item>MOBJ-Monthly Objective</item>
        <item>YOBJ-Yearly Objective</item>
        <item>PJOB-Periodic Task</item>
    </string-array>
    <string-array name="spinner_department">
        <item>1-ALL</item>
        <item>2-SAP/IT</item>
        <item>3-HR/ADMIN</item>
        <item>4-FINANCE</item>
        <item>5-DOMESTIC SALES</item>
        <item>6-INTERNATIONAL BUSINESS</item>
        <item>7-VINTEX</item>
        <item>8-STORES</item>
        <item>9-MATERIAL MANAGEMENT[PURC]</item>
        <item>10-MAINTENANCE</item>
        <item>11-1200 PUMP</item>
        <item>12-1199 MOTOR V6, V8 TO V12</item>
        <item>13-1201 MOTOR V4</item>
        <item>14-1198 SRN</item>
        <item>15-1196 SMG</item>
        <item>16-1100 SEZ ALL</item>
        <item>17-VENDOR DEVLOPMENT[PURCHA]</item>
        <item>18-MARKETING</item>
        <item>19-QUALITY/TESTING</item>
        <item>20-PRODUCT ENGG.</item>
        <item>21-PACKING/DISPATCH</item>
        <item>23-AUDIT</item>
        <item>25-SERVICE</item>
        <item>27-R/D</item>
        <item>28-1197 SHOS/SNB</item>
        <item>29-1300 NEW PLANT</item>
        <item>32-1194-CNC</item>
        <item>34-SOLAR SALES (GOVT.)</item>
        <item>35-MR DEPT.</item>
        <item>36-IMPORT DEPT.</item>
        <item>37-SOLAR SALES (OEM)</item>
        <item>38-INDUSTRIAL SALES</item>
        <item>41-7000SHAKTI IRRIGATION-RAU</item>
        <item>42-7010SHAKTI IRRIGATION-DRI</item>
        <item>46-PRODUCT MANAGEMENT</item>
        <item>47-CHANNEL MANAGEMENT</item>
        <item>48-VECTOR MOM</item>
        <item>49-SOLAR NABARD</item>
        <item>50-SOLAR MARKETING</item>

    </string-array>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="location_notification_desc">Location Fetching</string>
    <string name="place_to_visit">Place To Visit</string>
    <string name="pleaseEnterName">please enter name</string>
    <string name="pleaseEnterCode">please enter code</string>
    <string name="comment">Write comment here</string>
    <string name="please_attache_image">please attache image</string>
    <string name="reason">Write reason here</string>
    <string name="outcome">Write outcome here</string>
    <string name="daily_report_date">Daily Report Date</string>
    <string name="select_image">Select Image</string>
    <string name="camera">Camera</string>
    <string name="click_image">Please Click Image</string>
    <string name="want_to_perform">What operation do you want to perform?</string>
    <string name="display">Display</string>
    <string name="change">Change</string>
    <string name="gallery">Gallery</string>
    <string name="prospective_vendor">Prospective Vendor</string>
    <string name="vendor">Vendor</string>
    <string name="daily_report">Daily Report</string>
    <string name="vendor_name">Vendor Name</string>
    <string name="enter_vendor_name">Please Enter Vendor Name</string>
    <string name="vendor_code">Vendor Code</string>
    <string name="enter_vendor_code">Please Enter Vendor Code</string>
    <string name="vendor_address">Vendor Address</string>
    <string name="enter_vendor_address">Please Enter Vendor Address</string>
    <string name="vendor_contact_no">Vendor Contact No.</string>
    <string name="enter_vendor_contact_number">Please Enter Vendor Contact Number</string>
    <string name="enter_valid_contact_number">Please Enter valid Contact Number</string>
    <string name="current_date">Current Date</string>
    <string name="responsible_person">Responsible person</string>
    <string name="enter_sap_code">Please Enter Sap Code</string>
    <string name="responsible_person_2">Responsible person 2</string>
    <string name="responsible_person_3">Responsible person 3</string>
    <string name="visit_at">Visit At</string>
    <string name="enter_agenda">Please Enter Agenda</string>
    <string name="agenda">Agenda</string>
    <string name="discussion_points">Discussion Points</string>
    <string name="enter_discussion_points">Please Enter Discussion Points</string>
    <string name="target_date">Target Date</string>
    <string name="status">Status</string>
    <string name="select_target_date">Please Select Target Date</string>
    <string name="select_visitAt">Please Select Visit At first!</string>
    <string name="select_StatusFirst">Please Select Status first!</string>
    <string name="select_ImageFirst">Please attach Image first!</string>
    <string name="select_MinimumImages">Please attach minimum 2 images!</string>
    <string name="submit">Submit</string>
    <string name="meeting_with_vendor_img">Click Meeting with vendor Images</string>
    <string name="selectOpenGatePass">Select open gatepass</string>
    <string name="reportSubmittedSuccessfully">Report Submitted Successfully</string>
    <string name="somethingWentWrong">Something Went Wrong</string>
    <string name="take_photo">Take Photo</string>
    <string name="Click_Again">Image not clicked properly, please click again</string>
</resources>